<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/createProduct"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#000000" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameHint"
        android:singleLine="true" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descriptionHint" />

    <EditText
        android:id="@+id/product_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/priceHint" />

    <EditText
        android:id="@+id/product_rrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rrpHint" />

    <EditText
        android:id="@+id/product_quantity_in_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantityInStockHint" />

    <Spinner
        android:id="@+id/categories_list_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/categories" />

    <Button
        android:id="@+id/create_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/submitLegend" />

</LinearLayout>
