<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:contentDescription="@string/bear"
            android:scaleType="fitCenter"
            android:src="@drawable/bear_background" />

        <TextView
            android:id="@+id/loginLegend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginLegend"
            android:textSize="20sp" />

        <Button
            android:id="@+id/admin_login_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/loginAsAdminButtonLegend"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/user_login_button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/loginAsUserButtonLegend"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </LinearLayout>

</ScrollView>