<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/shopProductPageTitle"
        android:textSize="30sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="#000000" />

    <ListView
        android:id="@+id/product_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#C0C0C0"
        android:dividerHeight="2dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/quantityLegend"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/product_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:hint="@string/productQuantityHint"
            android:singleLine="true" 
            android:inputType="number"/>

        <Button
            android:id="@+id/add_to_cart_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/addToCartLegend"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/submit_order_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/submitOrderLegend"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>