<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/thumbnail"
        android:layout_width="10dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp" />

    <TextView
        android:id="@+id/orderId_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/orderIdLegend"
        android:textSize="18sp" />
        
    <TextView
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"      
        android:layout_toRightOf="@+id/orderId_legend"
        android:textSize="18sp"
        android:textColor="#FF0000" />
    
    <TextView
        android:id="@+id/orderUsername_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_below="@+id/orderId_legend"
        android:text="@string/orderUsernameLegend"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/order_user_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderUsername_legend"
        android:layout_toRightOf="@+id/thumbnail"
        android:textSize="16sp"
        android:textColor="#FF0000" />
    
    <TextView
        android:id="@+id/orderUserAddress_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_below="@+id/order_user_username"
        android:text="@string/orderUserAddressLegend"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/order_user_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orderUserAddress_legend"
        android:layout_toRightOf="@+id/thumbnail"
        android:textSize="16sp"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/line_legend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:gravity="center"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_below="@+id/order_user_address"
        android:text="@string/line" />
    
    <TextView
        android:id="@+id/orderProductName_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_below="@+id/line_legend"
        android:text="@string/orderProductNameLegend"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/order_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line_legend"
        android:layout_toRightOf="@+id/orderProductName_legend"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/orderProductQuantity_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_below="@+id/orderProductName_legend"
        android:text="@string/orderProductQuantityLegend"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/order_product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_product_name"
        android:layout_toRightOf="@+id/orderProductQuantity_legend"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/orderProductSubtotal_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_below="@+id/orderProductQuantity_legend"
        android:text="@string/orderProductSubtotalLegend"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/order_product_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_product_quantity"
        android:layout_toRightOf="@+id/orderProductSubtotal_legend"
        android:textSize="16sp" />
    
 	<TextView
        android:id="@+id/orderProductTotal_legend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_below="@+id/orderProductSubtotal_legend"
        android:text="@string/orderProductTotalLegend"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/order_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_product_subtotal"
        android:layout_toRightOf="@+id/orderProductTotal_legend"
        android:textSize="16sp" />

</RelativeLayout>